corpus/cpp/designated_init/case-01/snapshots/gcc13_14/native_text_capture/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [designated_init] designator order for field ‘Config::port’ does not match declaration order in ‘Config’
src/main.cpp: In function ‘int main()’:
    7 |     Config cfg{.timeout = 30, .port = 10};
      |                                         ^
raw : src/main.cpp:7:41: error: designator order for field ‘Config::port’ does not match declaration order in ‘Config’ @ src/main.cpp:7:41
| src/main.cpp:7:41
|     Config cfg{.timeout = 30, .port = 10};
|                                         ^